<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <Button
        android:id="@+id/GoBack_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="ReturnToMain"
        android:text="@string/BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Profile_Card"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profileIMG"
        app:layout_constraintTop_toBottomOf="@+id/profileIMG">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/petName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:text="@string/petName_display"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Animal_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dogs_display" />

            <TextView
                android:id="@+id/Profile_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ASPCALink_display"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petDistance_display" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:onClick="GoToWebpage"
                android:text="@string/ASPCALink_display" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <io.mcumiskey.petrescueapp.ProportionalImageView
        android:id="@+id/profileIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a" />

</androidx.constraintlayout.widget.ConstraintLayout>